# svgc

./: .gitignore  .gitlab-ci.yml  COPYING.LIB  ChangeLog  Makefile.am  Makefile.in  NEWS  RADEME.md  README  README.md  aclocal.m4  acsite.m4  config.h.in  configure  configure.ac  configure.in  svgc.m4  version.c  version.h
_make_config/: README  _7.sh  _make-version-c.sh  not-distributable.dir
examples/linear_gradient/: main.c  view.html
examples/radial_gradient/: README  main.c  view.html
examples/with-autotool/: Makefile.in  README  configure.in  main.c
examples/with-autotool/_autogen/: clean_config.sh  make_config.sh
examples/without-autotool/: Makefile  main.c  view.html
slackware/: NOTE.TXT  slack-desc  svgc.x86_32.SlackBuild  svgc.x86_64.SlackBuild
src/: Makefile.am  Makefile.in  _svgc_version.c  svgc-dlist.c  svgc-dlist.h  svgc.c  svgc.h
svgc-config/: Makefile.am  Makefile.in  head.in  make-svgc-config.in  tail.in
